Implemeneted item API
